--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+    "author": {
+    "name": "Hakan Bilgin",
+    "email": "hbi@longscript.com",
+    "url": "https://github.com/hbi99"
+  },
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^1.9.1",
